# Scrabble

./: .gitignore  CMakeLists.txt  Cuadricula.cpp  Cuadricula.h  Ficha.cpp  Ficha.h  FichaCreator.cpp  FichaCreator.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  List.cpp  List.h  Node.cpp  Node.h  Scrabble.pro  diccio.txt  dragwidget.cpp  dragwidget.h  main.cpp  mainCLion.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  other.xml  pantallacrear.cpp  pantallacrear.h  pantallacrear.ui  pantallaespera.cpp  pantallaespera.h  pantallaespera.ui  pantallajuego.cpp  pantallajuego.h  pantallajuego.ui  pantallatablero.cpp  pantallatablero.h  pantallatablero.ui  pantallaunirse.cpp  pantallaunirse.h  (+8 more)
